--- a/templates/mc/mc_base.html
+++ b/templates/mc/mc_base.html
@@ -90,6 +90,7 @@
                 <li class="nav-group reportinform-manage"><a href="{{ url_for('mc.reportinforms') }}">申報基本資料</a></li>
                 <li class="nav-group earnerinform-manage"><a href="{{ url_for('mc.earnerinforms') }}">所得人基本資料</a></li>
                 <li class="nav-group incomedata-manage"><a href="{{ url_for('mc.incomedatas') }}">所得資料維護</a></li>
+                <li class="nav-group broker-manage"><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
