--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -17,7 +17,19 @@
 {% endblock %}
 
 {% block main_content %}
-    <form method="post" name="commission_list" action="{{ url_for('broker.count') }}">
+    <form method="post" name="commission_list" action="{{ url_for('broker.distribute') }}">
+        <label>人員</label>
+        <div>
+            <input list="broker_ids" name="broker_id" placeholder="人員">
+            <datalist id="broker_ids">
+                <option value="員工1">員工1</option>
+                <option value="員工2">員工2</option>
+                <option value="員工3">員工3</option>
+                <option value="員工4">員工4</option>
+                <option value="員工5">員工5</option>
+                <option value="其他">其他</option>
+            </datalist>
+        </div>
         <table class="table table-bordered">
             <thead>
             <tr>
@@ -37,8 +49,10 @@
                     data-subtotal="{{ commission.subtotal }}">
                     <td>{{ commission.order_num }}</td>
                     <td>
-                        <input type="checkbox" name="commission" value="{{ commission.order_num }},{{ commission.group_name }},
-                                                                        {{ commission.car }}{{ commission.order_date }}"/>
+                        <input type="checkbox" name="order_num" value="{{ commission.order_num }}"/>
+                        <input type="hidden" name="group_name" value="{{ commission.group_name }}"/>
+                        <input type="hidden" name="car" value="{{ commission.car }}"/>
+                        <input type="hidden" name="order_date" value="{{ commission.order_date }}"/>
                     </td>
                     <td>{{ commission.group_name }}</td>
                     <td>{{ commission.car }}</td>
