--- a/templates/mc/sysparameters.html
+++ b/templates/mc/sysparameters.html
@@ -1,4 +1,4 @@
-{% extends 'mc/mc_base.html' %}
+{% extends 'mc/base.html' %}
 {% from "common/_macros.html" import static %}
 
 {% block title %}系統參數設定{% endblock %}
