--- a/templates/declare/earnerinforms.html
+++ b/templates/declare/earnerinforms.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/moxie.js"></script>
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/plupload.dev.js"></script>
     <script src="https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.js"></script>
-    <script src="{{ static('mc/js/earnerinform.js') }}"></script>
+    <script src="{{ static('declare/js/earnerinform.js') }}"></script>
     <style>
         .top-box button {
             float: left;
