--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -57,9 +57,9 @@
                 <li class="p2">
                     <a href="#">所得申報<span></span></a>
                     <ul class="subnav">
-                        <li class="nav-group reportinform-manage"><a href="{{ url_for('mc.reportinforms') }}">申報基本資料</a></li>
-                        <li class="nav-group earnerinform-manage"><a href="{{ url_for('mc.earnerinforms') }}">所得人基本資料</a></li>
-                        <li class="nav-group incomedata-manage"><a href="{{ url_for('mc.incomedatas') }}">所得資料維護</a></li>
+                        <li class="nav-group reportinform-manage"><a href="{{ url_for('declare.registers') }}">申報基本資料</a></li>
+                        <li class="nav-group earnerinform-manage"><a href="{{ url_for('declare.earners') }}">所得人基本資料</a></li>
+                        <li class="nav-group incomedata-manage"><a href="{{ url_for('declare.incomes') }}">所得資料維護</a></li>
                     </ul>
                 </li>
                 <li class="p3">
