--- a/templates/declare/incomes.html
+++ b/templates/declare/incomes.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/moxie.js"></script>
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/plupload.dev.js"></script>
     <script src="https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.js"></script>
-    <script src="{{ static('declare/js/incomedata.js') }}"></script>
+    <script src="{{ static('declare/js/income.js') }}"></script>
     <style>
         .top-box button {
             float: left;
@@ -52,19 +52,19 @@
                 data-id_no="{{ incomedata.id_no }}"
                 data-id_num="{{ incomedata.id_num }}"
                 data-id_name="{{ incomedata.id_name }}"
-                data-income_yyy="{{ incomedata.income_yyy }}"
-                data-income_mm="{{ incomedata.income_mm }}"
-                data-income_format="{{ incomedata.income_format }}"
-                data-income_mark="{{ incomedata.income_mark }}"
-                data-income_amt="{{ incomedata.income_amt }}"
+                data-income_yyy="{{ incomedata.yyy }}"
+                data-income_mm="{{ incomedata.mm }}"
+                data-income_format="{{ incomedata.format }}"
+                data-income_mark="{{ incomedata.mark }}"
+                data-income_amt="{{ incomedata.amt }}"
                 data-tax_amt="{{ incomedata.tax_amt }}"
                 data-net_amt="{{ incomedata.net_amt }}"
                 data-exe_industry="{{ incomedata.exe_industry }}"
                 data-other_income="{{ incomedata.other_income }}"
-                data-royalties_exp="{{ incomedata.royalties_exp }}"
-                data-house_tax_num="{{ incomedata.house_tax_num }}"
-                data-house_address="{{ incomedata.house_address }}"
-                data-declare_status="{{ incomedata.declare_status }}"
+                data-royalties_exp="{{ incomedata.roya_exp }}"
+                data-house_tax_num="{{ incomedata.house_tax}}"
+                data-house_address="{{ incomedata.house_add }}"
+                data-declare_status="{{ incomedata.decl_status }}"
                 data-comm_flag="{{ incomedata.comm_flag }}"
                 data-comm_id="{{ incomedata.comm_id }}"
                 data-remark="{{ incomedata.remark }}">
@@ -72,8 +72,8 @@
                 <td>{{ incomedata.id_no }}</td>
                 <td>{{ incomedata.id_num }}</td>
                 <td>{{ incomedata.id_name }}</td>
-                <td>{{ incomedata.income_format }}</td>
-                <td>{{ incomedata.declare_status }}</td>
+                <td>{{ incomedata.format }}</td>
+                <td>{{ incomedata.decl_status }}</td>
                 <td>
                     <button class="btn btn-default btn-xs edit-incomedata-btn ">編輯</button>
                     <button class="btn btn-danger btn-xs delete-incomedata-btn">刪除</button>
