--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -18,10 +18,9 @@
 
 {% block main_content %}
     <form method="post" name="commission_list" action="{{ url_for('broker.distribute') }}" role="form">
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>.
-        <label>人員</label>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div>
-            <input list="broker_ids" name="broker_id" placeholder="人員">
+            <input list="broker_ids" name="broker_id" placeholder="{{ broker.broker_id }}" value="{{ broker.broker_id }}">
             <datalist id="broker_ids">
                 <option value="員工1">員工1</option>
                 <option value="員工2">員工2</option>
@@ -30,6 +29,7 @@
                 <option value="員工5">員工5</option>
                 <option value="其他">其他</option>
             </datalist>
+            <button type="button" class="search-broker-btn">搜尋</button>
         </div>
         <table class="table table-bordered">
             <thead>
