--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -29,7 +29,7 @@
                 <option value="員工5">員工5</option>
                 <option value="其他">其他</option>
             </datalist>
-            <button type="button" class="search-broker-btn">搜尋</button>
+            <button type="button" class="btn btn-default btn-xs search-broker-btn">搜尋</button>
         </div>
         <table class="table table-bordered">
             <thead>
