--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -66,7 +66,7 @@
                     <a href="#">佣金作業<span></span></a>
                     <ul class="subnav">
                         <li class="nav-group broker-manage"><a href="{{ url_for('broker.show_comms') }}">佣金計算作業</a></li>
-{#                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.show_count') }}">佣金維護作業</a></li>#}
+                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.show_count') }}">佣金維護作業</a></li>
                         <li>佣金報表</li>
                     </ul>
                 </li>
