--- a/templates/broker/payment.html
+++ b/templates/broker/payment.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/moxie.js"></script>
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/plupload.dev.js"></script>
     <script src="https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.js"></script>
-    <script src="{{ static('broker/js/broker.js') }}"></script>
+{#    <script src="{{ static('broker/js/broker.js') }}"></script>#}
 {% endblock %}
 
 {% block page_title %}
@@ -17,7 +17,6 @@
 {% endblock %}
 
 {% block main_content %}
-    <form method="post" name="commission_list" action="{{ url_for('broker.distribute') }}" role="form">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div>
             <input list="broker_ids" name="broker_id" placeholder="{{ broker.broker_id }}" value="{{ broker.broker_id }}">
@@ -35,37 +34,25 @@
             <thead>
             <tr>
                 <th>項目</th>
-                <th>計算</th>
-                <th>團體</th>
-                <th>車次</th>
-                <th>總額</th>
-                <th>操作</th>
+                <th>日期</th>
+                <th>付款狀態</th>
+                <th>總金額</th>
             </tr>
             </thead>
             <tbody>
-            {% for commission in commissions %}
+            {% for payment in payments %}
                 <tr>
-                    <td>{{ commission.order_num }}</td>
-                    <td>
-                        <input type="checkbox" name="order_num" value="{{ commission.order_num }},{{ commission.group_name }},{{ commission.car }},{{ commission.order_date }}"/>
-{#                        <input type="hidden" name="group_name" value="{{ commission.group_name }}"/>#}
-{#                        <input type="hidden" name="car" value="{{ commission.car }}"/>#}
-{#                        <input type="hidden" name="order_date" value="{{ commission.order_date }}"/>#}
-                    </td>
-                    <td>{{ commission.group_name }}</td>
-                    <td>{{ commission.car }}</td>
-                    <td>{{ commission.subtotal }}</td>
+                    <td>{{ payment }}</td>
+                    <td>{{ payment.pay_date }}</td>
+                    <td>{{ payment.pay_status }}</td>
+                    <td>{{ payment.total_amt }}</td>
                     <td>
                         <button class="btn btn-default btn-xs edit-broker-btn " type="button">編輯</button>
                         <button class="btn btn-danger btn-xs delete-broker-btn" type="button">刪除</button>
                     </td>
                 </tr>
             {% endfor %}
-
-
             </tbody>
         </table>
-        <button class="btn btn-warning" style="float: right">計算</button>
-{#        type="button"#}
-    </form>
+
 {% endblock %}
