--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -65,9 +65,9 @@
                 <li class="p3">
                     <a href="#">佣金作業<span></span></a>
                     <ul class="subnav">
-                        <li class="nav-group broker-manage"><a href="{{ url_for('broker.show_comms') }}">佣金計算作業</a></li>
-{#                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.show_count') }}">佣金維護作業</a></li>#}
-                        <li>佣金報表</li>
+                        <li class="nav-group broker-manage"><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
+                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.show_count') }}">佣金維護</a></li>
+{#                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.payment') }}">付款清單</a></li>#}
                     </ul>
                 </li>
                 <li class="p4">
