--- a/templates/broker/brokermaintenances.html
+++ b/templates/broker/brokermaintenances.html
@@ -24,8 +24,9 @@
 {% block main_content %}
     <form method="post" name="commission_list" action="" role="form">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-    <div>
-            <input list="broker_ids" name="broker_id" placeholder="{{ broker.broker_id }}" value="{{ broker.broker_id }}">
+        <div style="float: right">
+            <input list="broker_ids" name="broker_id" placeholder="{{ broker.broker_id }}"
+                   value="{{ broker.broker_id }}">
             <datalist id="broker_ids">
                 <option value="員工1">員工1</option>
                 <option value="員工2">員工2</option>
@@ -35,6 +36,9 @@
                 <option value="其他">其他</option>
             </datalist>
             <button type="button" class="btn btn-default btn-xs search-broker-btn">搜尋</button>
+        </div>
+        <div class="top-box">
+            <button class="btn btn-warning" data-toggle="modal" data-target="#userset-dialog">新增</button>
         </div>
         <table class="table table-bordered">
             <thead>
