--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -67,7 +67,7 @@
                     <ul class="subnav">
                         <li class="nav-group broker-manage"><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
                         <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.show_count') }}">佣金維護</a></li>
-{#                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.payment') }}">付款清單</a></li>#}
+                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.payment') }}">付款清單</a></li>
                     </ul>
                 </li>
                 <li class="p4">
