--- a/templates/broker/brokermaintenances.html
+++ b/templates/broker/brokermaintenances.html
@@ -58,7 +58,7 @@
             {% for comm in comms %}
                 <tr>
                     <td>
-                        <input type="checkbox" name="order_num" value="計"/>
+                        <input type="checkbox" name="order_num" value="{{ comm.order_num }}"/>
                         {#                        <input type="hidden" name="group_name" value="{{ commission.group_name }}"/>#}
                         {#                        <input type="hidden" name="car" value="{{ commission.car }}"/>#}
                         {#                        <input type="hidden" name="order_date" value="{{ commission.order_date }}"/>#}
