--- a/templates/broker/brokermaintenances.html
+++ b/templates/broker/brokermaintenances.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/moxie.js"></script>
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/plupload.dev.js"></script>
     <script src="https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.js"></script>
-    <script src="{{ static('broker/js/brokercount.js') }}"></script>
+    <script src="{{ static('broker/js/brokermaintenance.js') }}"></script>
     <style>
         .top-box button {
             float: left;
@@ -38,7 +38,8 @@
             <button type="button" class="btn btn-default btn-xs search-broker-btn">搜尋</button>
         </div>
         <div class="top-box">
-            <button class="btn btn-warning" data-toggle="modal" data-target="#userset-dialog">新增</button>
+{#            <button class="btn btn-warning" data-toggle="modal" data-target="#userset-dialog">新增</button>#}
+            <button class="btn btn-warning add-broker-btn" type="button">新增</button>
         </div>
         <table class="table table-bordered">
             <thead>
