--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -20,16 +20,8 @@
     <form method="post" name="commission_list" action="{{ url_for('broker.distribute') }}" role="form">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div>
-            <input list="broker_ids" name="broker_id" placeholder="{{ broker.broker_id }}" value="{{ broker.broker_id }}">
-            <datalist id="broker_ids">
-                <option value="員工1">員工1</option>
-                <option value="員工2">員工2</option>
-                <option value="員工3">員工3</option>
-                <option value="員工4">員工4</option>
-                <option value="員工5">員工5</option>
-                <option value="其他">其他</option>
-            </datalist>
-            <button type="button" class="btn btn-default btn-xs search-broker-btn">搜尋</button>
+            <input type="text" name="broker_id" value="{{ broker.broker_name }}" readonly>
+            <button type="button" class="btn btn-default btn-xs search-broker-btn">選擇Broker</button>
         </div>
         <table class="table table-bordered">
             <thead>
