--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -45,29 +45,29 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav-sidebar">
-                <li>前台首頁</li>
+                <li class="unfold">前台首頁</li>
                 <li class="p1">
                     <a href="#">設定<span></span></a>
                     <ul class="subnav">
-                        <li class="nav-group userset-manage"><a href="{{ url_for('mc.usersets') }}">使用者設定</a></li>
-                        <li class="nav-group sysparameter-manage"><a href="{{ url_for('mc.sysparameters') }}">系統參數設定</a></li>
-                        <li class="nav-group listvalue-manage"><a href="{{ url_for('mc.listvalues') }}">清單值設定</a></li>
+                        <li><a href="{{ url_for('mc.usersets') }}">使用者設定</a></li>
+                        <li><a href="{{ url_for('mc.sysparameters') }}">系統參數設定</a></li>
+                        <li><a href="{{ url_for('mc.listvalues') }}">清單值設定</a></li>
                     </ul>
                 </li>
                 <li class="p2">
                     <a href="#">所得申報<span></span></a>
                     <ul class="subnav">
-                        <li class="nav-group reportinform-manage"><a href="{{ url_for('declare.registers') }}">申報基本資料</a></li>
-                        <li class="nav-group earnerinform-manage"><a href="{{ url_for('declare.earners') }}">所得人基本資料</a></li>
-                        <li class="nav-group incomedata-manage"><a href="{{ url_for('declare.incomes') }}">所得資料維護</a></li>
+                        <li><a href="{{ url_for('declare.registers') }}">申報基本資料</a></li>
+                        <li><a href="{{ url_for('declare.earners') }}">所得人基本資料</a></li>
+                        <li><a href="{{ url_for('declare.incomes') }}">所得資料維護</a></li>
                     </ul>
                 </li>
                 <li class="p3">
                     <a href="#">佣金作業<span></span></a>
                     <ul class="subnav">
-                        <li class="nav-group broker-manage"><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
-                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.show_count') }}">佣金維護</a></li>
-                        <li class="nav-group brokercount-manage"><a href="{{ url_for('broker.payment') }}">付款清單</a></li>
+                        <li><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
+                        <li><a href="{{ url_for('broker.show_count') }}">佣金維護</a></li>
+                        <li><a href="{{ url_for('broker.payment') }}">付款清單</a></li>
                     </ul>
                 </li>
                 <li class="p4">
