--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -13,15 +13,16 @@
 {% endblock %}
 
 {% block page_title %}
-    {{ self.title() }}
+    <h1>{{ self.title() }}</h1>
+    <h2>{{ broker.broker_name }}</h2>
 {% endblock %}
 
 {% block main_content %}
     <form method="post" name="commission_list" action="{{ url_for('broker.distribute') }}" role="form">
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div>
-            <input type="text" name="broker_id" value="{{ broker.broker_name }}">
-            <button type="button" class="btn btn-default btn-xs search-broker-btn">選擇Broker</button>
+            <input type="hidden" name="broker_id" value="{{ broker.broker_name }}">
+            <button type="button" class="btn btn-warning search-broker-btn">選擇Broker</button>
         </div>
         <table class="table table-bordered">
             <thead>
@@ -38,10 +39,11 @@
                 <tr>
                     <td>{{ commission.order_num }}</td>
                     <td>
-                        <input type="checkbox" name="order_num" value="{{ commission.order_num }},{{ commission.group_name }},{{ commission.car }},{{ commission.order_date }}"/>
-{#                        <input type="hidden" name="group_name" value="{{ commission.group_name }}"/>#}
-{#                        <input type="hidden" name="car" value="{{ commission.car }}"/>#}
-{#                        <input type="hidden" name="order_date" value="{{ commission.order_date }}"/>#}
+                        <input type="checkbox" name="order_num"
+                               value="{{ commission.order_num }},{{ commission.group_name }},{{ commission.car }},{{ commission.order_date }}"/>
+                        {#                        <input type="hidden" name="group_name" value="{{ commission.group_name }}"/>#}
+                        {#                        <input type="hidden" name="car" value="{{ commission.car }}"/>#}
+                        {#                        <input type="hidden" name="order_date" value="{{ commission.order_date }}"/>#}
                     </td>
                     <td>{{ commission.group_name }}</td>
                     <td>{{ commission.car }}</td>
@@ -53,6 +55,6 @@
             </tbody>
         </table>
         <button class="btn btn-warning" style="float: right">計算</button>
-{#        type="button"#}
+        {#        type="button"#}
     </form>
 {% endblock %}
