--- a/templates/mc/base.html
+++ b/templates/mc/base.html
@@ -65,6 +65,7 @@
                 <li class="p3">
                     <a href="#">佣金作業<span></span></a>
                     <ul class="subnav">
+                        <li><a href="{{ url_for('broker.brokerinfors') }}">導遊/領隊基本資料檔</a></li>
                         <li><a href="{{ url_for('broker.show_comms') }}">佣金計算</a></li>
                         <li><a href="{{ url_for('broker.show_count') }}">佣金維護</a></li>
                         <li><a href="{{ url_for('broker.payment') }}">付款清單</a></li>
