--- a/templates/broker/brokers.html
+++ b/templates/broker/brokers.html
@@ -99,8 +99,8 @@
                             <div class="col-sm-8">
                                 <input list="Brokerlists" class="form-control" name="brokerchose" placeholder="確認Broker">
                                 <datalist id="Brokerlists">
-                                    {% for i in range(1,5) %}
-                                    <option name="brokerchose" value="{{ i }}">{{ i }}</option>
+                                    {% for broker in brokers %}
+                                    <option name="brokerchose" value="{{ broker.brober_name }}{{ broker.phone }}">{{ broker.brober_name }}{{ broker.phone }}</option>
                                     {% endfor %}
                                 </datalist>
                             </div>
