--- a/templates/broker/brokerinfors.html
+++ b/templates/broker/brokerinfors.html
@@ -79,7 +79,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">導遊/領隊身份證號：</label>
                                 <div class="col-sm-8">
-                                    <input type="password" class="form-control" name="borker_num" placeholder="導遊/領隊身份證號">
+                                    <input type="text" class="form-control" name="borker_num" placeholder="導遊/領隊身份證號">
                                 </div>
                         </div>
                         <div class="form-group">
