--- a/templates/broker/brokerinfors.html
+++ b/templates/broker/brokerinfors.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/moxie.js"></script>
     <script src="https://cdn.staticfile.org/Plupload/2.1.1/plupload.dev.js"></script>
     <script src="https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.js"></script>
-    <script src="{{ static('mc/js/brokerinfor.js') }}"></script>
+    <script src="{{ static('broker/js/brokerinfor.js') }}"></script>
     <style>
         .top-box button {
             float: left;
@@ -36,14 +36,14 @@
         </tr>
         </thead>
         <tbody>
-        {% for brokerinfor in brokerinfors %}
-            <tr data-borker_name="{{ brokerinfor.borker_name }}"
-                data-borker_num="{{ brokerinfor.borker_num }}"
+        {% for brokerinfor in brokers %}
+            <tr data-broker_name="{{ brokerinfor.broker_name }}"
+                data-broker_num="{{ brokerinfor.broker_num }}"
                 data-travel="{{ brokerinfor.travel }}"
                 data-phone="{{ brokerinfor.phone }}"
                 data-address="{{ brokerinfor.address }}"
-                data-borker_id="{{ brokerinfor.borker_id }}">
-                <td>{{ brokerinfor.borker_name }}</td>
+                data-broker_id="{{ brokerinfor.broker_id }}">
+                <td>{{ brokerinfor.broker_name }}</td>
                 <td>{{ brokerinfor.travel }}</td>
                 <td>{{ brokerinfor.phone }}</td>
                 <td>{{ brokerinfor.address }}</td>
@@ -73,13 +73,13 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">導遊/領隊姓名：</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" name="borker_name" placeholder="導遊/領隊姓名	">
+                                    <input type="text" class="form-control" name="broker_name" placeholder="導遊/領隊姓名	">
                                 </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label">導遊/領隊身份證號：</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" name="borker_num" placeholder="導遊/領隊身份證號">
+                                    <input type="text" class="form-control" name="broker_num" placeholder="導遊/領隊身份證號">
                                 </div>
                         </div>
                         <div class="form-group">
